<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@color/middleGreyTransparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/projectAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:shapeAppearance="@style/roundedImageViewRounded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/projectAvatar"
        android:orientation="vertical">


        <TextView
            style="@style/TextViewSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_loggedInAs" />

        <TextView
            android:id="@+id/userNameLabel"
            style="@style/Body2WhiteBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="User Name" />
    </LinearLayout>


</RelativeLayout>




